--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.0.3",
+    "clsx": "^2.1.0",
     "new-component": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
