--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clsx": "^2.1.0",
     "new-component": "^5.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
